# gstreamer-sharp-1.0

./: Makefile  Makefile.am  Makefile.in  Makefile.include  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  glue.c  gstreamer-sharp-1.0.pc  gstreamer-sharp-1.0.pc.in  gstreamer-sharp.sln  gstreamer-sharp.userprefs  libtool
Test/: AssemblyInfo.cs  Main.cs  Test.csproj
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: changelog  control  copyright  files  libgstreamer1.0-cil.install  libgstreamer1.0-cil.installcligac  rules
gstreamer-sharp/: Allocator.cs  Application.cs  AssemblyInfo.cs  Bin.cs  Buffer.cs  BufferList.cs  BufferPool.cs  Bus.cs  Caps.cs  CapsFeatures.cs  CapsHandler.cs  ChildProxy.cs  Clock.cs  Context.cs  Element.cs  ElementFactory.cs  ElementHandler.cs  Event.cs  FakeObject.cs  Format.cs  Iterator.cs  Makefile  Makefile.am  Makefile.in  Manager.cs  MapInfo.cs  Memory.cs  Message.cs  MessageHandler.cs  MiniObject.cs  Object.cs  ObjectUtility.cs  Pad.cs  PadHandler.cs  Pipeline.cs  Plugin.cs  Query.cs  Sample.cs  Segment.cs  State.cs  (+9 more)
gstreamer-sharp/App/: Sink.cs  Src.cs
gstreamer-sharp/Audio/: BaseSrc.cs  ChannelPosition.cs  Format.cs  FormatInfo.cs  Info.cs  RingBuffer.cs  RingBufferSpec.cs  Src.cs  StreamVolume.cs
gstreamer-sharp/Base/: Adapter.cs  BaseSink.cs  BaseSrc.cs  ByteReader.cs  ByteWriter.cs  DataQueue.cs  PushSrc.cs  Sink.cs  Src.cs
gstreamer-sharp/BasePlugins/: PlayBin.cs  PlaySink.cs
gstreamer-sharp/CorePlugins/: FdSink.cs  FdSrc.cs  FileSink.cs  FileSrc.cs  Queue.cs  Tee.cs
gstreamer-sharp/GLib/: Error.cs  Quark.cs
gstreamer-sharp/GstSharp/: BusFunc.cs  DataQueueFuncs.cs  PackFunc.cs  StructureFunc.cs  TaskFunc.cs
gstreamer-sharp/UriDownloader/: Fragment.cs  UriDownloader.cs
gstreamer-sharp/Utils/: Utils.cs
gstreamer-sharp/Value/: Value.cs  ValueTable.cs
gstreamer-sharp/Video/: ColorBalance.cs  ColorBalanceChannel.cs  Overlay.cs
gstreamer-sharp/glue/: audioglue.c  baseglue.c  glue.c
test/: AssemblyInfo.cs  Main.cs  Program.cs  test.csproj
